{
  "version": 4,
  "terraform_version": "1.1.5",
  "serial": 108,
  "lineage": "6b7b58fc-06c2-3da9-3801-607864f6cd52",
  "resources": [
    {
      "module": "module.test-webserver",
      "mode": "managed",
      "type": "aws_eip",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0287915c68ffc718c",
            "domain": "vpc",
            "id": "eipalloc-0287915c68ffc718c",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-184-183-69.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.184.183.69",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.test-webserver",
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "NOWAY",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e232b942edaf8f9",
            "arn": "arn:aws:ec2:eu-central-1:190722613764:instance/i-0d8ae6f490c9d69cc",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d8ae6f490c9d69cc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-038d1b2b02d8e2822",
            "private_dns": "ip-10-0-101-88.eu-central-1.compute.internal",
            "private_ip": "10.0.101.88",
            "public_ip": "18.156.71.50",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0364e90ebebfe0ee1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ea99142074c01af",
            "tags": {
              "Name": "Tim's Webserver",
              "Owner": "\u003cXXX\u003e",
              "Project": "Paint elephants pink",
              "cost_center": "6310",
              "stage": "test"
            },
            "tags_all": {
              "Name": "Tim's Webserver",
              "Owner": "\u003cXXX\u003e",
              "Project": "Paint elephants pink",
              "automated_through": "Terraform",
              "cost_center": "6310",
              "created_by": "Terraform Workshop",
              "stage": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0250c5f5bb61930b6"
            ]
          },
          "dependencies": [
            "module.test-webserver.aws_security_group.web",
            "module.test-webserver.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "TEST",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00e232b942edaf8f9",
            "arn": "arn:aws:ec2:eu-central-1:190722613764:instance/i-0cd602b2416fe6506",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cd602b2416fe6506",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03a14826838157ab3",
            "private_dns": "ip-10-0-101-21.eu-central-1.compute.internal",
            "private_ip": "10.0.101.21",
            "public_ip": "18.185.9.1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07cb5281e56a2bdac",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04ea99142074c01af",
            "tags": {
              "Name": "Tim's Webserver",
              "Owner": "\u003cXXX\u003e",
              "Project": "Paint elephants pink",
              "cost_center": "6310",
              "stage": "test"
            },
            "tags_all": {
              "Name": "Tim's Webserver",
              "Owner": "\u003cXXX\u003e",
              "Project": "Paint elephants pink",
              "automated_through": "Terraform",
              "cost_center": "6310",
              "created_by": "Terraform Workshop",
              "stage": "test"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0250c5f5bb61930b6"
            ]
          },
          "dependencies": [
            "module.test-webserver.aws_security_group.web",
            "module.test-webserver.data.aws_ami.amazon-linux-2",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test-webserver",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:security-group/sg-0250c5f5bb61930b6",
            "description": "Allow access to the server from the web",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0250c5f5bb61930b6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web-access20220217132142161700000001",
            "name_prefix": "web-access",
            "owner_id": "190722613764",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-access"
            },
            "tags_all": {
              "Name": "web-access",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01015260dd19898f8",
            "domain": "vpc",
            "id": "eipalloc-01015260dd19898f8",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-18-156-30-37.eu-central-1.compute.amazonaws.com",
            "public_ip": "18.156.30.37",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "my-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-eu-central-1a",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:internet-gateway/igw-05c486e383dd74ef7",
            "id": "igw-05c486e383dd74ef7",
            "owner_id": "190722613764",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-01015260dd19898f8",
            "connectivity_type": "public",
            "id": "nat-0874f9043d3d4d53a",
            "network_interface_id": "eni-0c8decbaca7b19299",
            "private_ip": "10.0.101.184",
            "public_ip": "18.156.30.37",
            "subnet_id": "subnet-04ea99142074c01af",
            "tags": {
              "Name": "my-vpc-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-eu-central-1a",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-07614fc2e6a4445521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0874f9043d3d4d53a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-07614fc2e6a444552",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-05c486e383dd74ef7",
            "id": "r-rtb-01a9f38199ed17a571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01a9f38199ed17a57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:route-table/rtb-07614fc2e6a444552",
            "id": "rtb-07614fc2e6a444552",
            "owner_id": "190722613764",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-private"
            },
            "tags_all": {
              "Name": "my-vpc-private",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:route-table/rtb-01a9f38199ed17a57",
            "id": "rtb-01a9f38199ed17a57",
            "owner_id": "190722613764",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "my-vpc-public"
            },
            "tags_all": {
              "Name": "my-vpc-public",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "timeouts": null,
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070f5ffde66c0fbcc",
            "route_table_id": "rtb-07614fc2e6a444552",
            "subnet_id": "subnet-0f17a3fc3433af96a"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ac38fc5387a2274a",
            "route_table_id": "rtb-07614fc2e6a444552",
            "subnet_id": "subnet-0a767b991b7d5f644"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0855bd12e924369",
            "route_table_id": "rtb-07614fc2e6a444552",
            "subnet_id": "subnet-053cf693ebe743e12"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f5eb01ffb8b9e125",
            "route_table_id": "rtb-01a9f38199ed17a57",
            "subnet_id": "subnet-04ea99142074c01af"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ceda3857113f8054",
            "route_table_id": "rtb-01a9f38199ed17a57",
            "subnet_id": "subnet-035b36ec2d7884007"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08514d66aa6db12c1",
            "route_table_id": "rtb-01a9f38199ed17a57",
            "subnet_id": "subnet-010a37e31a5f951b0"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-0f17a3fc3433af96a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f17a3fc3433af96a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1a",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-0a767b991b7d5f644",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a767b991b7d5f644",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1b",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-053cf693ebe743e12",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053cf693ebe743e12",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-private-eu-central-1c"
            },
            "tags_all": {
              "Name": "my-vpc-private-eu-central-1c",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-04ea99142074c01af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ea99142074c01af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1a",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-035b36ec2d7884007",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-035b36ec2d7884007",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1b",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:subnet/subnet-010a37e31a5f951b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1c",
            "availability_zone_id": "euc1-az1",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010a37e31a5f951b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190722613764",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "my-vpc-public-eu-central-1c"
            },
            "tags_all": {
              "Name": "my-vpc-public-eu-central-1c",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            },
            "vpc_id": "vpc-080e0f47b6df943ce"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190722613764:vpc/vpc-080e0f47b6df943ce",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02382e4118261dd7e",
            "default_route_table_id": "rtb-08e48f4d8e73a1615",
            "default_security_group_id": "sg-0892caa291855e2cb",
            "dhcp_options_id": "dopt-557f7b3e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-080e0f47b6df943ce",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08e48f4d8e73a1615",
            "owner_id": "190722613764",
            "tags": {
              "Name": "my-vpc"
            },
            "tags_all": {
              "Name": "my-vpc",
              "automated_through": "Terraform",
              "created_by": "Terraform Workshop"
            }
          }
        }
      ]
    }
  ]
}